tests/NormalTests/paczka1/fuzzy1/86973666.err
Error in line 1: A697 A697 39,6
Error in line 10: oDyAguiR S355 5,9
Error in line 15: oDyAguiR A697 31,3
Error in line 16: oDyAguiR A635 80,7
Error in line 18: DktBOb A697 91,9
Error in line 36: 4D2TcJA9sFh A635 79,70
